--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "public/Build/UnityGame.js", "public/Build/Build.loader.js", "public/Build/Build.framework.js"],
   "exclude": ["node_modules"]
 }
