--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "eslint-config-next": "13.2.4",
     "framer-motion": "^10.4.0",
     "ftp": "^0.3.10",
-    "next": "^13.2.4",
+    "next": "latest",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.5",
