--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@chakra-ui/react": "^2.5.1",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@fontsource/open-sans": "^4.5.14",
+    "@fontsource/raleway": "^4.5.12",
     "@types/react-dom": "18.0.11",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "framer-motion": "^10.4.0",
     "ftp": "^0.3.10",
-    "next": "latest",
+    "next": "^13.2.4",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.5",
