--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@chakra-ui/react": "^2.5.1",
+    "@chakra-ui/react": "^2.5.5",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@fontsource/open-sans": "^4.5.14",
@@ -17,9 +17,10 @@
     "@fontsource/rubik": "^4.5.14",
     "@types/react-dom": "18.0.11",
     "body-scroll-lock": "^4.0.0-beta.0",
+    "caniuse-lite": "^1.0.30001474",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
-    "framer-motion": "^10.4.0",
+    "framer-motion": "^10.10.0",
     "ftp": "^0.3.10",
     "next": "^13.2.4",
     "react": "18.2.0",
@@ -27,7 +28,8 @@
     "react-hook-form": "^7.43.5",
     "react-redux": "^8.0.5",
     "react-unity-webgl": "^9.4.0",
-    "typescript": "4.9.5"
+    "typescript": "4.9.5",
+    "webpack": "^5.77.0"
   },
   "devDependencies": {
     "@svgr/webpack": "^6.5.1",
