--- a/package.json
+++ b/package.json
@@ -18,12 +18,13 @@
     "@types/react-dom": "18.0.11",
     "body-scroll-lock": "^4.0.0-beta.0",
     "caniuse-lite": "^1.0.30001474",
+    "chakra-ui": "^0.3.9",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "framer-motion": "^10.10.0",
     "ftp": "^0.3.10",
     "next": "^13.2.4",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.5",
     "react-redux": "^8.0.5",
