--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react-redux": "^8.0.5",
     "react-unity-webgl": "^9.4.0",
     "typescript": "4.9.5",
-    "webpack": "^5.77.0"
+    "webpack": "^5.77.0",
+    "zustand": "^4.3.8"
   },
   "devDependencies": {
     "@svgr/webpack": "^6.5.1",
